--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,16 @@ html{
 	right: 160px;
 	margin-top: -36px;
 }
+@media (max-width: 992px){
+	.dropdown-hover:hover .dropdown-menu{
+		display: inline-block!important;
+	}
+	.dropdown-hover .dropdown-menu{
+		right: 0px;
+		margin-top: 0px;
+		position: relative;
+	}
+}
 /*.navbar{
 	position: fixed;width: 100%;z-index: 111;top: 0px;
 }*/
